--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="keypad_num">#4DD0E1</color>
+    <color name="keypad_oper">#4FC3F7</color>
 </resources>
