--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/tv_equation"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="end"
+        android:padding="16dp"
+        android:text="equation"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@id/tv_result"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_result"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:padding="16dp"
+        android:text="result"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@id/flow_keypad"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <androidx.constraintlayout.helper.widget.Flow
         android:id="@+id/flow_keypad"
         android:layout_width="0dp"
@@ -25,60 +50,70 @@
     <Button
         android:id="@+id/btn_1"
         style="@style/numberKeypad"
+        android:onClick="numberClicked"
         android:text="1"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_2"
         style="@style/numberKeypad"
+        android:onClick="numberClicked"
         android:text="2"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_3"
         style="@style/numberKeypad"
+        android:onClick="numberClicked"
         android:text="3"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_4"
         style="@style/numberKeypad"
+        android:onClick="numberClicked"
         android:text="4"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_5"
         style="@style/numberKeypad"
+        android:onClick="numberClicked"
         android:text="5"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_6"
         style="@style/numberKeypad"
+        android:onClick="numberClicked"
         android:text="6"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_7"
         style="@style/numberKeypad"
+        android:onClick="numberClicked"
         android:text="7"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_8"
         style="@style/numberKeypad"
+        android:onClick="numberClicked"
         android:text="8"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_9"
         style="@style/numberKeypad"
+        android:onClick="numberClicked"
         android:text="9"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_0"
         style="@style/numberKeypad"
+        android:onClick="numberClicked"
         android:text="0"
         app:layout_constraintHorizontal_weight="1"
         tools:ignore="MissingConstraints" />
@@ -86,6 +121,7 @@
     <Button
         android:id="@+id/btn_equal"
         style="@style/operatorKeypad"
+        android:onClick="equalClicked"
         android:text="="
         app:layout_constraintHorizontal_weight="3"
         tools:ignore="MissingConstraints" />
@@ -93,18 +129,21 @@
     <Button
         android:id="@+id/btn_clear"
         style="@style/operatorKeypad"
+        android:onClick="clearClicked"
         android:text="C"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_plus"
         style="@style/operatorKeypad"
+        android:onClick="operatorClicked"
         android:text="+"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_minus"
         style="@style/operatorKeypad"
+        android:onClick="operatorClicked"
         android:text="-"
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
