[Feat] - UI 꾸미기
- 밝은 테마 및 어두운 테마에서의 각각 다른 color 다루는 방법

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:gravity="end"
         android:padding="16dp"
         android:text="equation"
+        android:textColor="@color/defaultTextColor"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/tv_result"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +27,7 @@
         android:gravity="end"
         android:padding="16dp"
         android:text="result"
+        android:textColor="@color/defaultTextColor"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@id/flow_keypad"
         app:layout_constraintEnd_toEndOf="parent"
