--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="keypad_num">#4DD0E1</color>
     <color name="keypad_oper">#4FC3F7</color>
+    <color name="defaultTextColor">#000000</color>
 </resources>
